--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "nodemon ./server/index.js",
+    "start": "nodemon server.js",
     "test": "jest",
     "build": "webpack -d --watch"
   },
   "dependencies": {
     "autoprefixer": "^8.6.1",
     "axios": "^0.18.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "css-loader": "^0.28.11",
@@ -23,6 +24,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.1.3",
     "mysql": "^2.15.0",
+    "node-fetch": "^2.1.2",
     "popper.js": "^1.14.3",
     "postcss-loader": "^2.1.5",
     "precss": "^3.1.2",
@@ -32,8 +34,7 @@
     "react-dom": "^16.4.0",
     "react-image-lightbox": "^5.0.0",
     "react-router-dom": "^4.2.2",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0"
+    "sass-loader": "^7.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -58,7 +59,9 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "morgan": "^1.9.0",
     "nodemon": "^1.17.5",
+    "style-loader": "^0.21.0",
     "superagent": "^3.8.3",
     "supertest": "^3.1.0",
     "url-loader": "^1.0.1",
